<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="view_state_filter"
        android:title="@string/filter_by_state">

        <ListPreference android:key="view_state_filter_state"
            android:title="@string/state_1"
            android:entries="@array/view_state_filter_texts"
            android:entryValues="@array/view_state_filter_keys"
            android:defaultValue="open"
            android:summary="%s" />
    </PreferenceCategory>

    <PreferenceCategory android:key="view_tag_filter"
        android:title="@string/filter_by_tags">

        <CheckBoxPreference android:key="view_tag_filter_all"
            android:title="@string/all"
            android:defaultValue="true"
            android:persistent="false" />

        <CheckBoxPreference android:key="view_tag_filter_notag"
            android:title="@string/no_tag"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
