<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="style"
        android:title="@string/style">

        <ListPreference android:key="view_style"
            android:title="@string/view_style"
            android:entries="@array/view_style_texts"
            android:entryValues="@array/view_style_keys"
            android:defaultValue="list"
            android:summary="%s" />
    </PreferenceCategory>

    <PreferenceCategory android:key="reminders"
        android:title="@string/reminders_notifications">

        <CheckBoxPreference android:key="notification_sound"
            android:title="@string/play_sound"
            android:defaultValue="true" />

        <CheckBoxPreference android:key="notification_vibrate"
            android:title="@string/vibrate"
            android:defaultValue="true" />

        <CheckBoxPreference android:key="notification_light"
            android:title="@string/light"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
